[package]
name = "flexo"
version = "0.1.0"
authors = ["Fabian Muscariello <nroi@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.25"
libc = "0.2"
http = "0.2"
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.5"
crossbeam = "0.7.3"
httparse = "1.3.4"
time = "0.1.3"
walkdir = "2.3.1"
xattr = "0.2.2"

[dev-dependencies]
tempfile = "3.1.0"
