[package]
name = "flexo"
version = "1.2.3"
authors = ["Fabian Muscariello <nroi@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.34"
libc = "0.2.86"
http = "0.2"
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
crossbeam = "0.8.0"
httparse = "1.3.4"
time = "0.1.3"
walkdir = "2.3.1"
xattr = "0.2.2"
log = "0.4.14"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
humantime = "2.1.0"
env_logger = "0.8.3"
glob = "0.3.0"

[dev-dependencies]
tempfile = "3.2.0"

