[package]
name = "flexo"
version = "1.6.6"
authors = ["Fabian Muscariello <nroi@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.38"
libc = "0.2.99"
http = "0.2"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
crossbeam = "0.8.1"
httparse = "1.3.4"
time = "0.1.3"
walkdir = "2.3.2"
log = "0.4.14"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
humantime = "2.1.0"
env_logger = "0.9.0"
glob = "0.3.0"
regex = "1.5.4"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
tempfile = "3.2.0"

