[package]
name = "integration-test-client"
version = "0.1.0"
authors = ["Fabian Muscariello <nroi@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.1"
http = "0.2.1"
crossbeam = "0.8.0"
crossbeam-utils = "0.8.0"
colored = "2.0.0"
log = "0.4.11"
env_logger = "0.7.1"
